2009-03-16  Eitan Isaacson  <eitan@ascender.com>

	* NEWS:
	* README:
	* configure.in: Prepared 1.6.0 release.

2009-03-11  Mike Gorse  <mgorse@novell.com>

	* plugins/interface_view.py: Call getindexInParent to pass the
	correct index to addSelection (bug #574783).

2009-03-04  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/main_window.py: Added an informative window
	title (bug #574103).
	* src/lib/accerciser/prefs_dialog.py: Fixed empty  padding
	issue (bug #574101)
	* plugins/script_recorder.py: Port to gtksourceview2 (bug #574100).

2009-02-17  Brad Taylor  <brad@getcoded.net>

	* plugins/interface_view.py: Don't allow the set_range to change the
	value of our accessible (bug #572201).

2009-02-17  Eitan Isaacson  <eitan@ascender.com>

	* NEWS:
	* README:
	* configure.in: Prepared 1.5.91 release.

2009-02-03  Eitan Isaacson  <eitan@ascender.com>

	* autogen.sh: Provide a $srcdir (bug #570332). 
	Thanks Theppitak Karoonboonyanan!

2008-02-02 Brian G. Merrell <bgmerrell@novell.com>

	* src/lib/accerciser/i18n.py.in: Use gettext.gettext (imported as
	translate_func) instead of _ in C_ to avoid distcheck failure.  This
	is part of the 1.5.9 release.

2008-02-02 Brian G. Merrell <bgmerrell@novell.com>

	* NEWS:
	* README:
	* configure.in: Prepared 1.5.9 release.

2009-01-28  Eitan Isaacson  <eitan@ascender.com>

	* po/ca.po: 
	* po/el.po: 
	* po/es.po: 
	* po/hu.po: 
	* po/nb.po: 
	* po/sl.po: 
	* po/sv.po: 
	* po/zh_CN.po: Updated PO files for msgctx.

	* src/lib/accerciser/i18n.py.in: 
	* src/lib/accerciser/plugin/plugin_manager.py: 
	* src/lib/accerciser/ui_manager.py: Use C_() instead of Q_() with
	context (bug #569341).

2009-01-26  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/ui_manager.py: Added context for "Bookmarks"
	for translation (bug #520296).

2009-01-18  Eitan Isaacson  <eitan@ascender.com>

	* NEWS
	* README
	* configure.in: Mark for 1.5.5 release.

2009-01-15  Eitan Isaacson  <eitan@ascender.com>
