@@ -1,3 +1,9 @@
+2009-04-05  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/prefs_dialog.py: 
+	* src/lib/accerciser/node.py: Updated highlight SVG to work with
+	newer rsvg (bug #576756).
+
 2009-03-16  Eitan Isaacson  <eitan@ascender.com>
 
 	* NEWS:
